-bsml2legacydb.pl: now correctly converts from interbase
-twinscan2bsml.pl: initial commit
-merge_twinscan_results.pl: initial commit
-interface: now displays project code on pipeline list pages
-Merged prok_pipeline-v1.1-devel onto head
    -Add components:
        -prok_pipeline_check
        -percent_gc
        -output_membrane_domain
    -Added templates directory
        -included prokaryotic annotation pipeline
    -Added modules
        -Prokaryotic::Pipeline::Statistics.pm
        -File::OpenFile.pm
    -Fixed bug in pipeline_summary component to not look for iterator output files ( in main out directory, not iterator dir)
    -Added option to phage_finder component for user to include their own info_file
    -Added project parameter to aragorn2bsml.pl script

ergatis-v2r6b2
--------------
-bugfix release for installer.  was failing on predotar component

next
----
-geneidgff2bsml.pl: now correctly converts to interbase
-pipeline list page for a project now shows project code
-changed all /usr/local/bin/perl paths to /usr/bin/perl in cgi-bin
-bugfix: tmhmm component wasn't actually passing OTHER_OPTS variable
-bugfix: tmhmm2bsml was failing when html anchors in output were commented out by tmhmm
-bugfix: ps_scan component how handles multi-fasta input files correctly
-changed glimmer3 to read executable paths from software.config
-translate_sequence: removed hard-coded paths, eliminated sh wrapper
-fixed sf.net bug 1843655: save_component.cgi was failing on values containing + symbol
-standardized the perl path to /usr/bin/perl in ergatis/src/perl (though they're mostly run by wrappers anyway)
-brought default project.config inline with ergatis.ini default values
-made PROJECT_CODE optional, can now omit value
-bugfix: create_iterator_list.pl was using Workflow::Logger instead of Ergatis::Logger
-changed glimmer3 to read executable paths from software.config
-translate_sequence: removed hard-coded paths, eliminated sh wrapper