@@ -160,6 +160,7 @@ $;TMHMM_EXEC$;=/usr/local/bin/tmhmm
 [component train_for_glimmer3_iteration]
 ;; install directory for glimmer.  software expects a bin directory underneath this
 $;GLIMMER3_DIR$;=/usr/local/packages/glimmer3
+$;ELPH_BIN$;=/usr/local/packages/ELPH/bin/elph
 
 [component translate_sequence]
 $;TRANSEQ_EXEC$;=/usr/local/packages/EMBOSS/bin/transeq
